--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"Testing09.aternos.me",
-	"port": "25565",
-	"name": "afkbot"
+	"ip":"Deterix.aternos.me",
+	"port": "38053",
+	"name": "NDAFKBOT"
 }
